--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,5 +6,5 @@ node_modules/
 # Ignore environment variables file
 .env
 
-# ignore generate secret key 
-.generateSecretKey.js
+# Ignore generated secret key
+generateSecretKey.js
